rename common-dto fatta