@@ -9,7 +9,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Component
 public class UserMapper {
@@ -56,15 +56,15 @@ public class UserMapper {
 
     public List<UserDTO> findByUsernameOrEmail(String username, String email){
         List<User> users = userRepository.findByUsernameOrEmail(username, email);
-        return (!users.isEmpty()) ? users.stream().map(this::convertToDTO).collect(Collectors.toList()) : null;
+        return (!users.isEmpty()) ? users.stream().map(this::convertToDTO).toList() : null;
     }
 
-    public UserDTO findByCodiceFiscale(String codiceFiscale){
-        return Optional.ofNullable(convertToDTO(userRepository.findByCodiceFiscale(codiceFiscale))).orElse(null);
+    public UserDTO findByFiscalCode(String fiscalCode){
+        return Optional.ofNullable(convertToDTO(userRepository.findByFiscalCode(fiscalCode))).orElse(null);
     }
 
-    public UserDTO findByNumeroCellulare(String numeroCellullare){
-        return Optional.ofNullable(convertToDTO(userRepository.findByNumeroCellulare(numeroCellullare))).orElse(null);
+    public UserDTO findByCellNumber(String cellNumber){
+        return Optional.ofNullable(convertToDTO(userRepository.findByCellNumber(cellNumber))).orElse(null);
     }
 
 }
